[package]
name = "changelog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.166", features = ["derive"]}
serde_json = "1.0.100"
dialoguer = "0.11.0"
chrono = "0.4.26"
regex = "1.10.2"
